Tests for MapUpdater